dark mode fonts fixed

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -232,6 +232,7 @@
 
 .benefitItemImage {
   font-size: 80px;
+  color: #000;
 }
 
 .sectionFeedbacks {
