--- a/app/contact/Contact.module.css
+++ b/app/contact/Contact.module.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #292828;
 }
 .contactsInnerWrapperRight {
   display: flex;
@@ -48,6 +49,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  color: #292828;
 }
 .contactsInnerWrapperLeft {
   display: flex;
@@ -55,6 +57,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  color: #292828;
 }
 .buttonWrapper {
   margin-top: 10px;
