--- a/containers/section_feedback/SectionFeedback.module.css
+++ b/containers/section_feedback/SectionFeedback.module.css
@@ -31,6 +31,7 @@
   font-size: 40px;
   margin-bottom: 40px;
   font-weight: 200;
+  color: #070707;
 }
 .feedbacksContainer {
   display: flex;
