--- a/containers/section_masters/MastersSection.module.css
+++ b/containers/section_masters/MastersSection.module.css
@@ -33,6 +33,8 @@
   margin-bottom: 70px;
   font-size: 40px;
   font-weight: 200;
+  color: #070707;
+
 }
 .mastersContainer {
   display: flex;
