--- a/containers/section_services/ServicesSection.module.css
+++ b/containers/section_services/ServicesSection.module.css
@@ -19,6 +19,8 @@
   font-size: 40px;
   margin-bottom: 60px;
   font-weight: 200;
+  color: #070707;
+
 }
 .servicesContainer {
   display: flex;
